--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@cliff-blog/docs",
   "version": "1.0.0",
+  "type": "module",
+  "private": true,
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "vitepress dev",
-    "build": "vitepress build"
+    "dev": "vitepress dev ./",
+    "build": "vitepress build ./"
   },
   "keywords": [],
   "author": "",
